ajout des features register part I

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -23,6 +23,7 @@
 
                 <% } else { %>
                     <a href="/login"><i class="fa fa-cogs"></i> Se connecter</a>
+                    <a href="/register"><i class="fa fa-cogs"></i> S'inscrire</a>
                 <% } %>
                 </nav>
             </nav>
