--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,6 +1,11 @@
 <h1>Home</h1>
 <p>Bienvenue sur mon blog, vous trouverez ici tous mes articles sur la Laponie !</p>
 
+<% if (locals.message) { %>
+    <strong><%= message %></strong>
+<% } %>
+
+
 <ul class="home-list">
     <% for (let i = 0; i < posts.length; i++){ %>
         <li>
